# rusty-connect4

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: Connect4Computer.rs  Connect4Human.rs  HowToConnect4.rs  HowToToot.rs  ScoreBoard.rs  Scores.rs  TootOttoComputer.rs  TootOttoHuman.rs  Welcome.rs  canvas.rs  display_window.rs  lib.rs  main.rs  player.rs  sidebar.rs  toot_canvas.rs
frontend/static/: index.html
static/: Connect4Computer.html  Connect4Human.html  HowToConnect4.html  HowToToot.html  ScoreBoard.html  Scores.html  TootOttoComputer.html  TootOttoHuman.html  humanPlayer.html  index.html  main.html  main1.html
static/javascripts/: Connect4App.js  Connect4Human.js  ScoreBoardCtrl.js  ScoresCtrl.js  TootOttoComputer.js  TootOttoHuman.js
