[package]
name = "backend"
version = "0.1.0"
authors = ["rkluzinski <ryankluzinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.14.0"
mongodb = "0.9.0"
rocket = { version = "0.4.4", default-features = false }
rocket_contrib = "0.4.4"
serde = { version = "1.0.105", features = ["derive"]}